# donor_db

./: Dockerfile  README.md  docker-compose.yml  interficie.py  pyproject.toml
src/: config.py  params.yaml
src/data/: README.md
src/data/tmp/documents/: documents.csv
src/features/: features.py  utils.py
src/pipeline/: CLI.py  dtx.py  extract.py  load.py  pipeline.py  tables_download.sql  transform.py
